Adds correct bootstrap link to all additional pages after index.html, makes all internal links functional for breadcrumb section and index.html, creates breadcrumbs on every page they are needed on, adds the preferences and underlying hotel services section with bar and wifi icons (need to find more using fontello)

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="aboutus.html">About Us</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -132,10 +132,10 @@
                     </div>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -591,9 +591,9 @@
       <div class="col">
         <h1>NortSea Hotel</h1>
         <div class="row">
-          <a href="#About Us">About Us</a>
-          <a href="#Services">Services</a>
-          <a href="#Contact">Contact</a>
+          <a href="aboutus.html">About Us</a>
+          <a href="services.html">Services</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
       <div class="col">
@@ -641,7 +641,7 @@
     </footer>
     <div class="row">
       <div class="col">
-        <p>Copyright © 2015 NortSea | About NortSea | Contact Support</p>
+        <p>Copyright © 2015 NortSea | <a href="aboutus.html">About NortSea</a> | <a href="contact.html">Contact Support</a>
       </div>
       <div class="col">
         <p>Designed by Faith34</p>
