--- a/services.html
+++ b/services.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <title>Services</title>
+    <link rel="stylesheet" href="css/bootstrap copy.css"></link>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <script defer src="fonts/fontawesome-all.js"></script>
   </head>
-  <body>
 
+  <body>
+    <div class="container-fluid">
+      <!-- Breadcrumb Section -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>Services</h1>
+          </div>
+          <div class="col">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Services</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <!-- Preferences Section -->
+      <div class="container">
+        <div class="row">
+          <h1>Preferences</h1>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis</p>
+          <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <h1>Hotel Facilities</h1>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
+            <p><i class="fas fa-glass-martini"></i>Bar</p>
+            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
+            <p><i class="fas fa-glass-martini"></i>Bar</p>
+            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
+            <p><i class="fas fa-glass-martini"></i>Bar</p>
+          </div>
+
+          <div class="col">
+
+          </div>
+          <div class="col">
+
+          </div>
+
+
+      </div>
+      <!-- Hotel Facilities -->
+      <div class="row">
+        <div class="">
+
+        </div>
+
+      </div>
+
+    </div>
   </body>
 </html>
