--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <title>Gallery</title>
+    <link rel="stylesheet" href="css/bootstrap copy.css"></link>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <script defer src="fonts/fontawesome-all.js"></script>
   </head>
-  <body>
 
+  <body>
+    <div class="container-fluid">
+      <!-- Breadcrumb Section -->
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>Gallery</h1>
+          </div>
+          <div class="col">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Gallery</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+
+          </div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
