Finally fixes fonts debacle!!  All icons officially back online!

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   <!-- Fluid wrapper for the whole page -->
   <div class="container-fluid whole-page">
     <!-- Header row -->
-    <header class="container header">
+    <header class="container">
       <div class="row">
-        <div class="col-md-3 d-flex align-items-center justify-content-end logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
+        <div class="col-md-3 d-flex align-items-center justify-content-start logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
         </div>
         <div class="col-md-9 nortsea-black">
           <div class="row">
-            <div class="col">
+          <div class="col">
               <i class="demo-icon icon-mail"></i>
               <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
             </div>
@@ -32,22 +32,22 @@
             <div class="col">
               <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  En
+                  EN
                   </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">TR</a>
+                  <a class="dropdown-item" href="#">ES</a>
+                  <a class="dropdown-item" href="#">PT</a>
                 </div>
               </div>
             </div>
             <div class="col">
-              <a href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-box"></i></a>
+              <a href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
               <a href="https://twitter.com/"><i class="demo-icon icon-twitter"></i></a>
               <a href="https://www.instagram.com/"><i class="demo-icon icon-instagram"></i></a>
               <a href="mailto: info@hellohelp.com"><i class="demo-icon icon-mail"></i></a>
             </div>
-          </div>
+          </div> -->
           <!-- New nav bar made with bootstrap -->
           <div class="row">
             <div class="col-md-12">
@@ -591,7 +591,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <i class="demo-icon icon-compass"></i>GPS:
+              <i class="demo-icon icon-compass"></i>GPS:
             </div>
             <div class="col">
               <p>12.021211-118.469009</p>
