--- a/index.html
+++ b/index.html
@@ -19,7 +19,48 @@
         </div>
         <div class="col-md-9 nortsea-black">
           <div class="row">
-          <div class="col">
+            <div class="col">
+              <i class="demo-icon icon-mail"></i><a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
+            </div>
+            <div class="col">
+              <i class="demo-icon icon-phone"></i><a href="tel:+440 875369208">+440 875369208</a>
+            </div>
+            <div class="col">
+              <button type="button" class="btn btn-outline-secondary log-in-box">Log In<span> &gt </span></button>
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="w-100">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+            <div class="col">
+
+            </div>
+          </div>
+          <!-- <div class="row">
+            <div class="col">
               <i class="demo-icon icon-mail"></i>
               <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
             </div>
@@ -47,11 +88,11 @@
               <a href="https://www.instagram.com/"><i class="demo-icon icon-instagram"></i></a>
               <a href="mailto: info@hellohelp.com"><i class="demo-icon icon-mail"></i></a>
             </div>
-          </div> -->
-          <!-- New nav bar made with bootstrap -->
+          </div>
+          New nav bar made with bootstrap
           <div class="row">
             <div class="col-md-12">
-              <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -101,7 +142,7 @@
                 </div>
               </nav>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
