--- a/index.html
+++ b/index.html
@@ -18,61 +18,20 @@
         <div class="col-md-3 d-flex align-items-center justify-content-start logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
         </div>
         <div class="col-md-9 nortsea-black">
-          <div class="row">
-            <div class="col">
-              <i class="demo-icon icon-mail"></i><a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
-            </div>
-            <div class="col">
-              <i class="demo-icon icon-phone"></i><a href="tel:+440 875369208">+440 875369208</a>
-            </div>
-            <div class="col">
-              <button type="button" class="btn btn-outline-secondary log-in-box">Log In<span> &gt </span></button>
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="w-100">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-            <div class="col">
-
-            </div>
-          </div>
-          <!-- <div class="row">
-            <div class="col">
+          <div class="row d-flex align-items-center justify-content-center top-most">
+            <div class="col-md-3">
               <i class="demo-icon icon-mail"></i>
               <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
             </div>
-            <div class="col">
-              <i class="demo-icon icon-phone"></i><a href="tel:+440 875369208">+440 875369208</a>
+            <div class="col-md-3">
+              <i class="demo-icon icon-phone-in-talk"></i><a href="tel:+440 875369208">+440 875369208</a>
             </div>
-            <div class="col">
-              <button type="button" class="btn btn-outline-secondary">Log-in</button>
+            <div class="col-md-2">
+              <button type="button" class="btn btn-outline-secondary d-flex align-items-center justify-content-center log-in-box">LOG IN<i class="demo-icon icon-right-open"></i></button>
             </div>
-            <div class="col">
+            <div class="col-md-2">
               <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn btn-outline-secondary dropdown-toggle language-box" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   EN
                   </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -82,14 +41,14 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-2 d-flex align-items-center justify-content-center social-link-bar">
               <a href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
               <a href="https://twitter.com/"><i class="demo-icon icon-twitter"></i></a>
               <a href="https://www.instagram.com/"><i class="demo-icon icon-instagram"></i></a>
               <a href="mailto: info@hellohelp.com"><i class="demo-icon icon-mail"></i></a>
             </div>
           </div>
-          New nav bar made with bootstrap
+          <!-- New nav bar made with bootstrap -->
           <div class="row">
             <div class="col-md-12">
               <nav class="navbar navbar-expand-lg navbar-dark">
@@ -99,9 +58,9 @@
                   </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
+                  <ul class="navbar-nav d-flex justify-content-between flex-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="aboutus.html">About Us</a>
@@ -134,15 +93,17 @@
                     <li class="nav-item">
                       <a class="nav-link" href="contact.html">Contact</a>
                     </li>
+                    <li>
+                      <form class="form-inline my-2 my-lg-0">
+                        <!-- <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search"> -->
+                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="demo-icon icon-search"></i></button>
+                      </form>
+                    </li>
                   </ul>
-                  <form class="form-inline my-2 my-lg-0 col-auto">
-                    <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="demo-icon icon-search"></i></button>
-                  </form>
                 </div>
               </nav>
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
     </header>
@@ -152,41 +113,43 @@
         <!--Do I need this row container and following col-md-11?-->
         <div class="col-md-11">
           <!-- Carousel -->
-          <div class="carousel row">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="..." alt="First slide">
+          <div class="jumbotron-fluid">
+            <div class="carousel row">
+              <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="..." alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..." alt="Third slide">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="..." alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="..." alt="Third slide">
-                </div>
+                <!-- Arrows for carousel - Ask Kyle if we need it? Or if removing this will break it? -->
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
               </div>
-              <!-- Arrows for carousel - Ask Kyle if we need it? Or if removing this will break it? -->
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
             </div>
-          </div>
           <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
-          <h1>35% Sale</h1>
-          <h2>You enter summer with refreshing rates</h2>
-          <button type="button" class="btn btn-light">Explore it</button>
+            <h1>35% Sale</h1>
+            <h2>You enter summer with refreshing rates</h2>
+            <button type="button" class="btn btn-light">Explore it</button>
+          </div>
         </div>
         <!-- Weather, Gallery, and Tour Column - Add links after I collect pics -->
         <div class="col-md-1">
@@ -317,9 +280,9 @@
       </div>
     </section>
     <!-- Travel, Discover, Book, and Support Area -->
-    <section class="container">
-      <div class="content-background-one">
-        <div class="row">
+    <section class="container content-background-one">
+      <div class="mid-section">
+        <div class="row travel-bar">
           <div class="col">
             <img src="img/rollingsuitcase.svg" alt="rolling suitcase">
             <h1>Amazing Travel</h1>
@@ -609,9 +572,7 @@
               <p><i class="demo-icon icon-location"></i>Address:</p>
             </div>
             <div class="col">
-              <p>1100 Pico Blvd<br />
-              Santa Monica, CA 90405<br />
-              United States</p>
+              <p>1100 Pico Blvd<br /> Santa Monica, CA 90405<br /> United States</p>
             </div>
           </div>
           <div class="row">
@@ -619,7 +580,7 @@
               <p><i class="demo-icon icon-phone"></i>Phone:</p>
             </div>
             <div class="col">
-              <a href="tel: +440 1233123208">+440 1233123208</a>
+              <a href="tel: +440 1233123208" target="_blank">+440 1233123208</a>
             </div>
           </div>
           <div class="row">
@@ -627,7 +588,7 @@
               <p><i class="demo-icon icon-paper-plane-empty"></i>Email:</p>
             </div>
             <div class="col">
-              <a href="mailto: support@nortsea.com">support@nortsea.com</a>
+              <a href="mailto: support@nortsea.com" target="_blank">support@nortsea.com</a>
             </div>
           </div>
           <div class="row">
@@ -645,16 +606,15 @@
       </div>
     </footer>
     <!-- Sub-footer Section -->
-    <section class="container"
-      <div class="row sub-footer">
-        <div class="col copyright">
-          <p>Copyright © 2015 NortSea | <a href="aboutus.html">About NortSea</a> | <a href="support@nortsea.com">Contact Support</a>
-        </div>
-        <div class="col designer">
-          <p>Designed by Faith34</p>
-        </div>
+    <section class="container sub-footer" <div class="row">
+      <div class="col copyright">
+        <p>Copyright © 2015 NortSea | <a href="aboutus.html">About NortSea</a> | <a href="support@nortsea.com" target="_blank">Contact Support</a>
       </div>
-    </section>
+      <div class="col designer">
+        <p>Designed by Faith34</p>
+      </div>
+  </div>
+  </section>
 
   </div>
 </body>
