Removes fontawesome link from all root files, turns all breadcrumbs and necessary areas gold, removes demo-icon class from all index.html icons so the class for the preference pages icon doesn't interfere, adds open-sans font to all root files, centers NortSea Hotel area in column, scoots all Contact Us info into closer alignment, adds top and bottom margin to footer area, breaks header again, adds all icons to Services.html, with appropriate background coloring (still needs work)

--- a/services.html
+++ b/services.html
@@ -7,68 +7,71 @@
     <link rel="stylesheet" href="css/bootstrap copy.css"></link>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fontello.css">
-    <script defer src="fonts/fontawesome-all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
   <body>
     <div class="container-fluid">
       <!-- Breadcrumb Section -->
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h1>Services</h1>
-          </div>
-          <div class="col">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Services</li>
-              </ol>
-            </nav>
+      <div class="row page-top">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h1 class="gold">Services</h1>
+            </div>
+            <div class="col">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Services</li>
+                </ol>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
       <!-- Preferences Section -->
-      <div class="container">
-        <div class="row">
-          <h1>Preferences</h1>
-          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis</p>
-          <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+      <div class="row page-top">
+        <div class="container">
+          <div class="row">
+            <h1 class="gold">Preferences</h1>
+            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis</p>
+            <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+          </div>
         </div>
       </div>
-
-      <div class="container">
-        <div class="row">
-          <h1>Hotel Facilities</h1>
+      <!-- Preferences Section -->
+      <div class="row page-top">
+        <div class="container">
+          <div class="row">
+            <h1 class="gold">Hotel Facilities</h1>
+          </div>
+          <div class="row">
+            <div class="col-md-4 side-by-side">
+              <i class="demo-icon icon-signal"></i><p>High-speed Internet</p>
+              <i class="demo-icon icon-air-conditioner"></i><p>Air conditioning</p>
+              <i class="demo-icon icon-swimming"></i><p>Swimming pool</p>
+              <i class="demo-icon icon-baby-buggy"></i><p>Childcare</p>
+              <i class="demo-icon icon-dumbbell"></i><p>Fitness</p>
+            </div>
+            <div class="col-md-4 side-by-side">
+              <i class="demo-icon icon-fridge"></i><p>Fridge</p>
+              <i class="demo-icon icon-washing-machine-1"></i><p>Washing machine</p>
+              <i class="demo-icon icon-phone"></i><p>Room service</p>
+              <i class="demo-icon icon-soccer-ball"></i><p>Childcare</p>
+              <i class="demo-icon icon-lock"></i><p>Reception safe</p>
+            </div>
+            <div class="col-md-4 side-by-side">
+              <i class="demo-icon icon-food"></i><p>Free breakfast</p>
+              <i class="demo-icon icon-parking-1"></i><p>Free parking</p>
+              <i class="demo-icon icon-air"></i><p>Hair dryer</p>
+              <i class="demo-icon icon-bar"></i><p>Bar</p>
+              <i class="demo-icon icon-tv"></i><p>TV</p>
+            </div>
+          </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
-            <p><i class="fas fa-glass-martini"></i>Bar</p>
-            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
-            <p><i class="fas fa-glass-martini"></i>Bar</p>
-            <p><i class="fas fa-wifi"></i>High-Speed Internet</p>
-            <p><i class="fas fa-glass-martini"></i>Bar</p>
-          </div>
-
-          <div class="col">
-
-          </div>
-          <div class="col">
-
-          </div>
-
-
       </div>
-      <!-- Hotel Facilities -->
-      <div class="row">
-        <div class="">
-
-        </div>
-
-      </div>
-
     </div>
   </body>
 </html>
