--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap copy.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/fontello.css">
-    <script defer src="fonts/fontawesome-all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="row">
           <div class="col">
-            <h1>Contact</h1>
+            <h1 class="gold">Contact</h1>
           </div>
           <div class="col">
             <nav aria-label="breadcrumb">
