--- a/index.html
+++ b/index.html
@@ -7,101 +7,104 @@
   <link rel="stylesheet" href="css/bootstrap copy.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/fontello.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
   <!-- Fluid wrapper for the whole page -->
-  <div class="container-fluid whole-page">
+  <div class="container-fluid">
     <!-- Header row -->
     <header class="container">
       <div class="row page-top">
-        <div class="col-md-3 d-flex align-items-center justify-content-start logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
+        <div class="col-md-3 d-flex align-items-center justify-content-end logo-top"><img src="img/Logo.png" alt="NortSea Logo" /img>
         </div>
-        <div class="col-md-9 nortsea-black">
-          <div class="row d-flex align-items-center justify-content-center top-most">
-            <div class="col-md-3">
-              <i class="demo-icon icon-mail"></i>
-              <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
-            </div>
-            <div class="col-md-3">
-              <i class="demo-icon icon-phone-in-talk"></i><a href="tel:+440 875369208">+440 875369208</a>
-            </div>
-            <div class="col-md-2">
-              <button type="button" class="btn btn-outline-secondary d-flex align-items-center justify-content-center log-in-box">LOG IN<i class="demo-icon icon-right-open"></i></button>
-            </div>
-            <div class="col-md-2">
-              <div class="dropdown">
-                <button class="btn btn-outline-secondary dropdown-toggle language-box" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="row page-top">
+          <div class="col-md-9">
+            <div class="row d-flex align-items-center justify-content-center top-most">
+              <div class="col-md-3">
+                <i class="icon-mail"></i>
+                <a href="mailto: info@hellohelp.com">info@hellohelp.com</a>
+              </div>
+              <div class="col-md-3">
+                <i class="icon-phone-in-talk"></i><a href="tel:+440 875369208">+440 875369208</a>
+              </div>
+              <div class="col-md-2">
+                <button type="button" class="btn btn-outline-secondary d-flex align-items-center justify-content-center log-in-box">LOG IN<i class="icon-right-open"></i></button>
+              </div>
+              <div class="col-md-2">
+                <div class="dropdown">
+                  <button class="btn btn-outline-secondary dropdown-toggle language-box" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   EN
                   </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">TR</a>
-                  <a class="dropdown-item" href="#">ES</a>
-                  <a class="dropdown-item" href="#">PT</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">TR</a>
+                    <a class="dropdown-item" href="#">ES</a>
+                    <a class="dropdown-item" href="#">PT</a>
+                  </div>
                 </div>
               </div>
+              <div class="col-md-2 d-flex align-items-center justify-content-center social-link-bar">
+                <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook-squared"></i></a>
+                <a href="https://twitter.com/"><i class="icon-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="icon-instagram"></i></a>
+                <a href="mailto: info@hellohelp.com"><i class="icon-mail"></i></a>
+              </div>
             </div>
-            <div class="col-md-2 d-flex align-items-center justify-content-center social-link-bar">
-              <a href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
-              <a href="https://twitter.com/"><i class="demo-icon icon-twitter"></i></a>
-              <a href="https://www.instagram.com/"><i class="demo-icon icon-instagram"></i></a>
-              <a href="mailto: info@hellohelp.com"><i class="demo-icon icon-mail"></i></a>
-            </div>
-          </div>
-          <!-- New nav bar made with bootstrap -->
-          <div class="row">
-            <div class="col-md-12">
-              <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- New nav bar made with bootstrap -->
+            <div class="row">
+              <div class="col-md-12">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                  <a class="navbar-brand" href="#"></a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav d-flex justify-content-between flex-auto">
-                    <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="aboutus.html">About Us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav d-flex justify-content-between flex-auto">
+                      <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="aboutus.html">About Us</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Services
                         </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Products
                         </a>
-                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                      </div>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="gallery.html">Gallery</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li>
-                      <form class="form-inline my-2 my-lg-0">
-                        <!-- <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search"> -->
-                        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="demo-icon icon-search"></i></button>
-                      </form>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="#">Action</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                      </li>
+                      <li>
+                        <form class="form-inline my-2 my-lg-0">
+                          <!-- <input class="form-control mr-sm-2 invisible" type="search" placeholder="Search" aria-label="Search"> -->
+                          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit"><i class="icon-search"></i></button>
+                        </form>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+              </div>
             </div>
           </div>
         </div>
@@ -146,7 +149,7 @@
                     </a>
                 </div>
               </div>
-            <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
+              <!-- Text for on top of carousel - Ask Kyle how to structure this area -->
               <h1>35% Sale</h1>
               <h2>You enter summer with refreshing rates</h2>
               <button type="button" class="btn btn-light">Explore it</button>
@@ -156,13 +159,13 @@
           <div class="col-md-1">
             <div class="row">
               <h1>Greece</h1>
-              <i class="demo-icon icon-sun"></i>
+              <i class="icon-sun"></i>
               <p>26°/19°</p>
               <p>Sunny</p>
             </div>
             <div class="row">
               <h1>Gallery</h1>
-              <i class="demo-icon icon-picture"></i>
+              <i class="icon-picture"></i>
             </div>
             <div class="row">
               <h1>360 Virtual Tour</h1>
@@ -172,7 +175,7 @@
           <!-- Hotel/booking section - Figure out if I need two rows here or not, also what spacing to use -->
           <div class="row">
             <div class="col-md-2 hotel">
-              <i class="demo-icon icon-hospital"></i>
+              <i class="icon-hospital"></i>
               <h1>Hotel</h1>
             </div>
             <div class="col-md-12">
@@ -186,7 +189,7 @@
                           <div class='input-group date' id='datetimepicker1'>
                             <input type='text' class="form-control" placeholder="16.07.2015" />
                             <span class="input-group-addon">
-                                        <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
+                                        <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
                             </span>
                           </div>
                         </div>
@@ -203,7 +206,7 @@
                           <div class='input-group date' id='datetimepicker1'>
                             <input type='text' class="form-control" placeholder="28.07.2015" />
                             <span class="input-group-addon">
-                                          <span class="glyphicon glyphicon-calendar"><i class="demo-icon icon-calendar"></i></span>
+                                          <span class="glyphicon glyphicon-calendar"><i class="icon-calendar"></i></span>
                             </span>
                           </div>
                         </div>
@@ -302,11 +305,11 @@
             </div>
             <div class="col">
               <img src="img/map.svg" alt="map">
-              <h1>Discover</h1>
+              <h1 class="gold">Discover</h1>
               <p>Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
               <!-- Default dropright button -->
               <div class="btn-group dropright">
-                <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-secondary dropdown-toggle gold" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Read More
                   </button>
                 <div class="dropdown-menu">
@@ -346,7 +349,7 @@
           <!-- About Hotel Area -->
           <div class="row">
             <div class="col">
-              <h1>About Hotel</h1>
+              <h1 class="gold">About Hotel</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
             </div>
           </div>
@@ -562,7 +565,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-2 hotel">
+          <div class="col-md-3 hotel">
             <h3>NortSea Hotel</h3>
             <div class="row">
               <a class="col-md-12" href="aboutus.html">About Us</a>
@@ -570,25 +573,48 @@
               <a class="col-md-12" href="contact.html">Contact</a>
             </div>
           </div>
-          <div class="col-md-4 contact flex-auto container">
+          <div class="col-md-5 contact">
             <h3>Contact Us</h3>
             <div class="row">
-              <div class="col-md-6 contact-column-one">
-                <p><i class="demo-icon icon-location"></i>Address:</p>
-                <hr>
-                <p><i class="demo-icon icon-phone"></i>Phone:</p>
-                <p><i class="demo-icon icon-paper-plane-empty"></i>Email:</p>
-                <p><i class="demo-icon icon-compass"></i>GPS:</p>
+              <div class="row">
+                <div class="col contact-column-one gold">
+                  <p><i class="icon-location gold"></i>Address:</p>
+                </div>
+                <div class="col contact-column-two">
+                  <p>1100 Pico Blvd<br />Santa Monica, CA 90405<br />United States</p>
+                </div>
               </div>
-              <div class="col-md-6 contact-column-two">
-                <p>1100 Pico Blvd<br />Santa Monica, CA 90405<br />United States</p>
-                <a href="tel: +440 1233123208" target="_blank">+440 1233123208</a>
-                <a href="mailto: support@nortsea.com" target="_blank">support@nortsea.com</a>
-                <p>12.021211-118.469009</p>
+              <hr>
+              <div class="row">
+                <div class="col contact-column-one">
+                  <p class="gold"><i class="icon-phone gold"></i>Phone:</p>
+                </div>
+                <div class="col contact-column-two">
+                  <a href="tel: +440 1233123208" target="_blank">+440 1233123208</a>
+                </div>
               </div>
+              <hr>
+              <div class="row">
+                <div class="col contact-column-one">
+                  <p class="gold"><i class="icon-paper-plane-empty gold"></i>Email:</p>
+                </div>
+                <div class="col contact-column-two">
+                  <a href="mailto: support@nortsea.com" target="_blank">support@nortsea.com</a>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col contact-column-one">
+                  <p class="gold"><i class="icon-compass gold"></i>GPS:</p>
+                </div>
+                <div class="col contact-column-two">
+                  <p>12.021211-118.469009</p>
+                </div>
+              </div>
+              <hr>
             </div>
           </div>
-          <div class="col-md-3 d-flex align-items-center justify-content-start logo-bottom">
+          <div class="col-md-1 d-flex align-items-center justify-content-end logo-bottom">
             <img src="img/bottomlogo.png" alt="NortSea logo">
           </div>
         </div>
@@ -596,11 +622,11 @@
     </footer>
     <!-- Sub-footer Section -->
     <section class="row sub-footer">
-      <div class="container">
+      <div class="container ">
         <div class="row">
           <div class="col-md-12">
             <p class="copyright">Copyright © 2015 NortSea | <a href="aboutus.html">About NortSea</a> | <a href="support@nortsea.com" target="_blank">Contact Support</a>
-            <p class="designer">Designed by Faith34</p>
+              <p class="designer">Designed by Faith34</p>
           </div>
         </div>
       </div>
