Adds a new mobile-first.html file, along with a style-two.css file to explore mobile-first creation, sets the styles for the breadcrumb area of the gallery.html file.  This code can be reused and applied to this section on all other pages with breadcrumbs.

--- a/gallery.html
+++ b/gallery.html
@@ -13,30 +13,33 @@
   <body>
     <div class="container-fluid">
       <!-- Breadcrumb Section -->
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h1 class="gold">Gallery</h1>
-          </div>
-          <div class="col">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Gallery</li>
-              </ol>
-            </nav>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-
+      <div class="row mid-section">
+        <div class="container">
+          <div class="row breadcrumb-row">
+            <div class="col text-left">
+              <h1 class="gold">Gallery</h1>
+            </div>
+            <div class="col">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb breadcrumb-ol">
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Gallery</li>
+                </ol>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
-
+      <div class="row mid-section">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <i class="icon-picture-1"></i>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
