Committing and pushing so I can close and focus on other project

--- a/contact.html
+++ b/contact.html
@@ -13,26 +13,30 @@
   <body>
     <div class="container-fluid">
       <!-- Breadcrumb Section -->
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h1 class="gold">Contact</h1>
-          </div>
-          <div class="col">
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Contact</li>
-              </ol>
-            </nav>
+      <div class="row mid-section">
+        <div class="container">
+          <div class="row breadcrumb-row">
+            <div class="col text-left">
+              <h1 class="gold">Contact</h1>
+            </div>
+            <div class="col">
+              <nav aria-label="breadcrumb">
+                <ol class="breadcrumb breadcrumb-ol">
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="#">Pages</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Contact</li>
+                </ol>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col">
+      <div class="row mid-section">
+        <div class="container">
+          <div class="row">
+            <div class="col">
 
+            </div>
           </div>
         </div>
       </div>
