--- a/services.html
+++ b/services.html
@@ -13,15 +13,15 @@
   <body>
     <div class="container-fluid">
       <!-- Breadcrumb Section -->
-      <div class="row page-top">
+      <div class="row mid-section">
         <div class="container">
-          <div class="row">
-            <div class="col">
+          <div class="row breadcrumb-row">
+            <div class="col text-left">
               <h1 class="gold">Services</h1>
             </div>
             <div class="col">
               <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
+                <ol class="breadcrumb breadcrumb-ol">
                   <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                   <li class="breadcrumb-item"><a href="#">Pages</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Services</li>
@@ -32,12 +32,12 @@
         </div>
       </div>
       <!-- Preferences Section -->
-      <div class="row page-top">
+      <div class="row mid-section">
         <div class="container">
-          <div class="row">
-            <h1 class="gold">Preferences</h1>
-            <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis</p>
-            <p>Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
+          <div class="row d-flex justify-content-center">
+            <h2 class="gold">Preferences</h2>
+            <p class="italic-bolder lead">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis</p>
+            <p class="italic-normal">Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
           </div>
         </div>
       </div>
