--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
       </div>
       <div class="row mid-section">
         <div class="container">
-          <div class="row">
+          <div class="row icon-picture-row">
             <div class="col">
               <i class="icon-picture-1"></i>
             </div>
